Adding logging logic.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,6 @@ server.port=8081
 spring.kafka.bootstrap-server = localhost:9092
 kafka.user.groupId = user
 kafka.user.topic.name = userTopic
+
+logging.level.root=INFO
+logging.level.org.springframework.web=DEBUG
